--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,56 @@
+arabic-reshaper==2.1.3
 asgiref==3.3.4
+beautifulsoup4==4.9.3
+bs4==0.0.1
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==8.0.0
+colorama==0.4.4
+cryptography==3.4.7
 dj-database-url==0.5.0
-Django==3.2
+Django==3.2.3
 django-ckeditor==6.0.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
+django-rest==0.8.7
+django-widget-tweaks==1.4.8
+djangorestframework==3.12.4
+future==0.18.2
+futures==3.1.1
+gcloud==0.18.3
+googleapis-common-protos==1.53.0
+goslate==1.5.1
 gunicorn==20.0.4
+html5lib==1.1
+httplib2==0.19.1
+idna==2.10
+jwcrypto==0.8
+lxml==4.6.3
+oauth2client==4.1.3
 Pillow==8.1.0
+protobuf==3.17.0
 psycopg2==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pycryptodome==3.10.1
+PyDictionary==2.0.1
+pyparsing==2.4.7
+PyPDF2==1.26.0
+Pyrebase4==4.4.3
+python-bidi==0.4.2
 python-decouple==3.4
+python-jwt==3.3.0
 pytz==2020.5
+reportlab==3.5.67
+requests==2.25.1
+requests-toolbelt==0.9.1
+rsa==4.7.2
+six==1.16.0
+soupsieve==2.2.1
 sqlparse==0.4.1
+urllib3==1.26.4
+webencodings==0.5.1
 whitenoise==5.2.0
+xhtml2pdf==0.2.5
